###################################################################################
################## Butianyun QT Video Lesson V2 ###################################
########### BUTIANYUN， QT Programming Trainning Professional ######################
####################################################################################


cmake_minimum_required(VERSION 3.5)

project(ButianyunQTToolBox VERSION 0.1 LANGUAGES CXX)


add_subdirectory(ButianyunQTToolBoxMain)
add_subdirectory(ButianyunQMLCacheLoader)
add_subdirectory(examples)
